--- a/src/views/register.html
+++ b/src/views/register.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="top-header">
-        <div clarr="logo-div"><img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre" id="logo"></div>
+        <div class="logo-div"><img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre" id="logo"></div>
         <div class="barra-busqueda"><input type="text" placeholder="Buscar productos, marcas..."><button ><i class="fa-solid fa-magnifying-glass"></i></button></div>
         <div class="header-p-1"><p><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</p></div>
     </div>
